[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["web-programming"]
description = "Eliminate N+1 query bugs when using Juniper"
documentation = "https://docs.rs/juniper-eager-loading-code-gen"
edition = "2018"
homepage = "https://github.com/davidpdrsn/juniper-eager-loading-code-gen"
keywords = ["web", "graphql", "juniper"]
license = "MIT"
name = "juniper-eager-loading-code-gen"
readme = "README.md"
repository = "https://github.com/davidpdrsn/juniper-eager-loading.git"
version = "0.3.0"

[dependencies]
proc-macro2 = "^0.4"
quote = "^0.6"
syn = "^0.15"
darling = "^0.9"
heck = "^0.3"

[lib]
proc-macro = true
