[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["web-programming"]
description = "Eliminate N+1 query bugs when using Juniper"
documentation = "https://docs.rs/juniper-eager-loading-code-gen"
edition = "2018"
homepage = "https://github.com/davidpdrsn/juniper-eager-loading-code-gen"
keywords = ["web", "graphql", "juniper"]
license = "MIT"
name = "juniper-eager-loading-code-gen"
readme = "README.md"
repository = "https://github.com/davidpdrsn/juniper-eager-loading.git"
version = "0.4.2"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits"] }
heck = "^0.3"
proc-macro-error = "0.4.4"

[lib]
proc-macro = true
