[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["web-programming"]
description = "Eliminate N+1 query bugs when using Juniper"
documentation = "https://docs.rs/juniper-eager-loading"
edition = "2018"
homepage = "https://github.com/davidpdrsn/juniper-eager-loading"
keywords = ["web", "graphql", "juniper"]
license = "MIT"
name = "juniper-eager-loading"
readme = "README.md"
repository = "https://github.com/davidpdrsn/juniper-eager-loading.git"
version = "0.0.2"

[dependencies]
juniper-eager-loading-code-gen = { version = "0.0.2", path = "../juniper-eager-loading-code-gen" }

[dev-dependencies]
juniper = "^0.12"
assert-json-diff = "1.0.0"
serde_json = "1.0.39"
backtrace = "0.3.26"
diesel = { version = "^1", features = ["postgres"] }
