[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["web-programming"]
description = "Eliminate N+1 query bugs when using Juniper"
documentation = "https://docs.rs/juniper-eager-loading"
edition = "2018"
homepage = "https://github.com/davidpdrsn/juniper-eager-loading"
keywords = ["web", "graphql", "juniper"]
license = "MIT"
name = "juniper-eager-loading"
readme = "README.md"
repository = "https://github.com/davidpdrsn/juniper-eager-loading.git"
version = "0.5.1"

[dependencies]
juniper-from-schema = "0.5"
juniper-eager-loading-code-gen = { version = "0.5.1", path = "../juniper-eager-loading-code-gen" }

[dev-dependencies]
juniper = { version = "0.14", features = ["chrono"] }
assert-json-diff = "1"
serde_json = "1"
backtrace = "0.3"
diesel = { version = "1", features = ["postgres", "mysql", "sqlite", "chrono"] }
trybuild = "1"
static_assertions = "1"
either = "1"
chrono = "0.4"

[[example]]
name = "has_one"
path = "../examples/has_one.rs"

[[example]]
name = "has_one_no_macros"
path = "../examples/has_one_no_macros.rs"

[[example]]
name = "option_has_one"
path = "../examples/option_has_one.rs"

[[example]]
name = "option_has_one_no_macros"
path = "../examples/option_has_one_no_macros.rs"

[[example]]
name = "has_many"
path = "../examples/has_many.rs"

[[example]]
name = "has_many_no_macros"
path = "../examples/has_many_no_macros.rs"

[[example]]
name = "has_many_with_arguments"
path = "../examples/has_many_with_arguments.rs"

[[example]]
name = "has_many_through"
path = "../examples/has_many_through.rs"

[[example]]
name = "has_many_through_no_macros"
path = "../examples/has_many_through_no_macros.rs"

[[example]]
name = "field_with_arguments"
path = "../examples/field_with_arguments.rs"
